tests/machine/x/c/go_auto.error
line: 0
error: output mismatch
-- got --
5
3.1400000000000001
42
-- want --
5
3.14
42
   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
