tests/machine/x/c/go_auto.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", (2 + 3));
  printf("%.17g\n", 3.14);
  printf("%d\n", 42);
  return 0;
}
